@@ -14,12 +14,12 @@
  * limitations under the License.
  */
 
-
 package org.springframework.security.authorization;
 
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Set;
 import java.util.function.Supplier;
 
 import org.junit.jupiter.api.Test;
@@ -32,6 +32,7 @@ import org.springframework.security.core.Authentication;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatNullPointerException;
 
 /**
  * Tests for {@link AuthoritiesAuthorizationManager}.
@@ -45,7 +46,7 @@ class AuthoritiesAuthorizationManagerTests {
 	void setRoleHierarchyWhenNullThenIllegalArgumentException() {
 		AuthoritiesAuthorizationManager manager = new AuthoritiesAuthorizationManager();
 		assertThatIllegalArgumentException().isThrownBy(() -> manager.setRoleHierarchy(null))
-				.withMessage("roleHierarchy cannot be null");
+			.withMessage("roleHierarchy cannot be null");
 	}
 
 	@Test
@@ -88,14 +89,19 @@ class AuthoritiesAuthorizationManagerTests {
 	}
 
 	@Test
+	// gh-18543
 	void authorizeWhenAuthorityIsNullThenDoesNotThrowNullPointerException() {
 		AuthoritiesAuthorizationManager manager = new AuthoritiesAuthorizationManager();
 
 		Authentication authentication = new TestingAuthenticationToken("user", "password",
 				Collections.singletonList(() -> null));
 
-		Collection<String> authorities = Collections.singleton("ROLE_USER");
+		Collection<String> authoritiesContainsThrowsNPE = Set.of("ROLE_USER");
 
-		assertThat(manager.authorize(() -> authentication, authorities).isGranted()).isFalse();
+		// must be Collection that throws NPE when .contains(null) is invoked
+		// to replicate the issue in gh-18543
+		assertThatNullPointerException().isThrownBy(() -> authoritiesContainsThrowsNPE.contains(null));
+		assertThat(manager.authorize(() -> authentication, authoritiesContainsThrowsNPE).isGranted()).isFalse();
 	}
+
 }
